<resources>
    <string name="app_name">PNL Jurusan Bisnis</string>
    <string name="header_text">JURUSAN BISNIS</string>
    <string name="header_subtext">POLITEKNIK NEGERI LHOKSEUMAWE</string>
    <string name="home_title">Home</string>
    <string name="hero_description">Hero image</string>
    <string name="home_tentang_text">Tentang Jurusan Bisnis</string>
    <string name="home_tentang_subtext">Jurusan Bisnis berdiri pada tahun 2024 berdasarkan Surat Keputusan Menteri Pendidikan, Kebudayaan, Riset dan Teknologi Republik Indonesia Nomor 5 Tahun 2024.</string>
    <string name="home_tentang_button_text">SELENGKAPNYA</string>
    <string name="tentang_title">Tentang Jurusan Bisnis</string>
    <string name="tentang_sekilas_text">Jurusan Bisnis Politeknik Negeri Lhokseumawe berdiri tahun 2024, setelah sebelumnya dikenal sebagai Jurusan Tata Niaga sejak 1997. Jurusan ini memiliki 6 program studi dan menerapkan prinsip good governance dalam tata kelola kelembagaan.</string>
    <string name="tentang_visi_text">Jurusan Teknik Sipil pada tahun 2024 menjadi pusat pendidikan vokasi di bidang Teknik  Sipil yang mampu bersaing pada tingkat nasional dan internasional.</string>
    <string name="tentang_misi_text">1. Menyelenggarakan kegiatan pendidikan vokasi di bidang Teknik Sipil yang berkarakter.\n2. Melaksanakan dan mengembangkan penelitian terapan pada bidang Teknik Sipil, dan\n3. Melaksanakan pengabdian kepada masyarakat dalam menyelesaikan permasalahan di bidang Teknik Sipil untuk peningkatan mutu kehidupan masyarakat.</string>
    <string name="program_studi_title">Program Studi</string>
    <string name="program_studi_subtitle">Program Studi yang Tersedia di Jurusan Bisnis</string>
    <string name="program_studi_keuangan_islam_terapan_text">Keuangan Islam Terapan</string>
    <string name="program_studi_akuntansi_lembaga_keuangan_syariah_text">Akuntansi Lembaga Keuangan Syariah</string>
    <string name="program_studi_manajemen_keuangan_sektor_publik_text">Manajemen Keuangan Sektor Publik</string>
    <string name="program_studi_akuntansi_text">Akuntansi</string>
    <string name="program_studi_administrasi_bisnis_text">Administrasi Bisnis</string>
    <string name="program_studi_akuntansi_sektor_publik_text">Akuntansi Sektor Publik</string>
    <string name="berita_title">Berita</string>
    <string name="berita_subtitle">Berita Terbaru di Jurusan Bisnis</string>
    <string name="berita_detail_title">Berita Detail</string>
    <string name="berita_detail_isi_text">Isi Berita</string>
    <string name="berita_1_title">Ini Kata Direktur PNL Saat Hadiri Pelepasan Mahasiswa Magang Program MSIB</string>
    <string name="berita_1_date">6 September 2024</string>
    <string name="berita_1_isi">Lhokseumawe - Direktur Politeknik Negeri Lhokseumawe (PNL) hadiri acara Pembekalan dan Pelepasan Program Magang dan Studi Independent Bersertifikat (MSIB) Batch 7 semester ganjil tahun 2024/2025 Ruang Rapat Direktur pada kamis, (05/09/2024).\n\n
Dalam sambutannya Direktur PNL Ir. Rizal Syahyadi, ST., M.Eng.,Sc.,IPM., ASEAN Eng., APEC Eng mengatakan kepada mahasiswa yang mengikuti untuk bekerja dengan baik dan sungguh-sungguh.\n\n
"Pada saat magang tetap mengikuti aturan yang berlaku, tetap berkomunikasi kepada keluarga dan juga pembimbing dan jangan lupa laksanakan sholat. Selalu jaga nama baik almamater walaupun pahit tetap berkerja dengan baik," harap pria yang akrab di sapa Didi ini.\n\n
"Sebelum berangkat koordinasi ke ka prodi dan kajur masing-masing agar nilai adik-adik semua tetap terecord," Jelas Didi.\n\n
Sebelumnya Ketua pelaksana kegiatan yang juga Kepala Unit Pelaksana Teknis Pengembangam Karir dan Kewirausahaan Mahasiswa (UPT PK2M) PNL Diana, S.E. Ak., M.Si.CA mengatakan, peserta magang adalah 9 orang dari Jurusan TIK dan Jurusan Bisnis.\n\n
“Di tahun ini kita mengirim 9 orang mahasiswa dari 2 jurusan yaitu 8 orang dari jurusan TIK dan 1 orang dari jurusan Bisnis dan adik-adik ini merupakan mahasiswa terbaik yang kita kirim karena mereka Lulus dalam seleksi nasional,” jelasnya.\n\n
Diana juga berpesan kepada mahasiswa supaya terus meningkatkan kompetensi diri, karena dunia industri saat ini sangat membutuhkan orang-orang yang mampu berinovasi.\n\n
“Kita harus mengupgrade diri, makanya yang dibutuhkan adalah mahasiswa yang berinovasi, jangan sia-siakan kesempatan yang ada dan tetap jaga nama baik almamater kita” ujar Diana.\n\n
Adapun mahasiswa yang mengikuti program MSIB tahun 2024 yaitu, dari Jurusan TIK Dinda Fitria Indriana Prodi Teknik Informatika Program SIB di Yayasan Dicoding Indonesia, Muhammad Rafli Aulia Prodi Teknik Informatika Program SIB di Yayasan Dicoding Indonesia, Rachel Ardana Putra Ginting Prodi Teknik Informatika Program SIB di Yayasan Dicoding Indonesia.\n\n
Selanjutnya Andika Prodi TRKJ Program MIB di PT. Kinema Syntrans Multimedia, Annisa Meyra Prodi TRKJ Program MIB di PT. Kinema Syntrans Multimedia, lalu Muhammad Adillah Prodi TRM Program MIB di LLDIKTI IX, Muhammad Rizki Ramadhana Prodi TRM Program MIB di PT. Kinema Syntrans Multimedia.\n\n
Lalu Shirath Dana Prodi TRM Program MIB di PT. Kinema Syntrans Multimedia, dan terakhir dari Jurusan Bisnis Annisa Nurfadillah Prodi MKSP Program MIB di Museum Sandi Badan Siber dan Sandi Negara.\n\n
Turut hadir dalam pelepasan mahasiswa magang program MSIB Wakil Direktur Bidang Akademik, Kemahasiswaan, dan Alumni Muhammad Arhami, S.Si., M.Kom, Ketua Jurusan Bisnis, Sekretaris Jurusan Bisnis, Ketua Jurusan TIK, Sekretaris Jurusan TIK, Ka. Prodi MKSP, Ka. Prodi Teknik Informatika, Ka. Prodi TRKJ, dan Ka. Prodi TRM. [HumasPNL]
    </string>
    <string name="berita_2_title">Mahasiswa Calon lulusan PNL antusias mengikuti Kuliah Umum Pengembangan Soft Skills</string>
    <string name="berita_2_date">5 September 2024</string>
    <string name="berita_2_isi">
Lhokseumawe -  Dengan mengangkat tema \"Raih Sukses Dengan Soft Skills Terbaik\" Untuk Hadapi Tantangan Di Dunia Kerja Sebanyak 825 mahasiswa Politeknik Negeri Lhokseumawe (PNL) mengikuti Seminar Soft Skills dan Kuliah Umum tahun 2024 yang di adakan oleh Career Development Center (CDC) kepada ratusan mahasiswa calon lulusan PNL, Rabu (04/09/24) lalu.\n\nKegiatan yang bertempat di Aula lantai 3 Gedung utama ini diisi oleh Dedy Haryadi Hasan ST., M.S.M selaku Hubungan Industrial Dept. Operasional SDM Komp. SDM PT Pupuk Iskandar Muda dan M. Taufik Hidayat selaku HR Business Partner DC West Region PT Paragon Technology dan Innovation DC Aceh.\n\nDiana, S.E ., Ak. M.Si.,CA selaku kepala CDC dalam sambutannya menyampaikan \"pelaksanaan soft skill ini adalah hal wajib bagi mahasiswa yang dilaksanakan mulai 19 Agustus - 4 September, Seminar ini bertujuan untuk adek-adek menyiapkan diri memasuki lingkungan kerja.\" Terangnya.\n\nDiana juga mengucapkan banyak terima kasih kepada PT PIM  yang telah memberikan ruang perekrutan untuk lulusan PNL, bahkan ini sudah perekrutan ke 3. Tidak lupa pula mengucapkan terimakasih kepada PT Paragon yang akan menandatangani MoU kerjasama dengan PNL.\n\n\"Kita berharap adek-adek sukses dan memiliki daya saing di dunia kerja. Dalam skala lokal nasional bahkan internasional.\" Harapnya.\n\nDirektur PNL Ir. Rizal Syahyadi, S.T., M.Eng.Sc.,IPM., ASEAN Eng., APEC Eng melalui Wakil Direktur I Bidang Akademik, Kemahasiswaan dan Alumni Muhammad Arhami, S.Si., M.Kom memyampaikan \"Kemampuan soft skill, dianggap remeh, padahal justru hal tersebut yang menentukan, Sebagai contoh kemampuan ilmu komunikasi, ketika menyampaikan pendapat, membangun relasi, sangat mempengaruhi dalam dunia karir terutama dalam dunia industri.\" sambutnya.\n\nLebih lanjut Muhammad Arhami juga menyampaiakan nasihat kepada para mahasiswa.\"Tidak ada gunanya jika kepintaran tidak diimbangi dengan kemampuan soft skill. Selain itu kejujuran dan Atittude sangat penting, sebab hal tersebut akan menjadi modal dasar kemanapun adik-adik pergi nantinya.\" Tegas Muhammad Arhami.\n\nAcara yang dimulai pukul 14.00 ini dilanjutkan dengan penandatanganan MoU antara PNL dengan  PT Paragon Technology dan Innovation DC Aceh, serta kuliah umum dari PT PIM dan PT Paragon Technology dan Innovation DC Aceh yang dipandu oleh Zulkarnaini, SE. M.Si. Ak. Ca. CIFRS dan Ir. Muhammad Hatta, S.ST., M.T., CPS., CPPS., CCLS., CTRS., CCHS. [HumasPNL]
    </string>
    <string name="pengumuman_title">Pengumuman</string>
    <string name="pengumuman_subtitle">Pengumuman Terbaru di Jurusan Bisnis</string>
    <string name="pengumuman_detail_title">Pengumuman Detail</string>
    <string name="pengumuman_detail_isi_text">Isi Pengumuman</string>
    <string name="pengumuman_1_title">Kalender Akademik Tahun 2024/2025</string>
    <string name="pengumuman_1_date">30 Agustus 2024</string>
    <string name="pengumuman_1_isi">Kalender Akademik Politeknik Negeri Lhokseumawe Tahun 2024/2025</string>
    <string name="back_button">Back</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
</resources>