<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base"
    android:fillViewport="true"
    android:fitsSystemWindows="true"
    tools:context=".Pengumuman1Activity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/header_layout"
            layout="@layout/header_jurusan_bisnis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="34dp"
            android:layout_marginTop="16dp"
            android:background="@color/base"
            android:src="@drawable/ic_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/header_layout" />

        <TextView
            android:id="@+id/tv_page_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/pengumuman_detail_title"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_layout" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            android:paddingTop="18dp"
            app:layout_constraintTop_toBottomOf="@id/tv_page_title">

            <TextView
                android:id="@+id/tv_berita_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/pengumuman_1_title"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <!-- News Date -->
            <TextView
                android:id="@+id/tv_berita_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/pengumuman_1_date"
                android:textSize="14sp" />

            <!-- News Image -->
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="24dp"
                android:background="@color/gray" />

            <!-- Section Title (e.g. "Isi Berita") -->

            <TextView
                android:id="@+id/tv_isi_berita_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/pengumuman_detail_isi_text"
                android:textColor="@color/blue"
                android:textSize="16sp"
                android:textStyle="bold" />

            <!-- Main News Content -->
            <TextView
                android:id="@+id/tv_berita_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="21dp"
                android:lineSpacingExtra="2dp"
                android:text="@string/pengumuman_1_isi"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="21dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/pengumuman_1_isi"
                android:src="@drawable/img_pengumuman_1_isi" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>