<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/base"
    android:fillViewport="true"
    tools:context=".BeritaFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Include Header Layout -->
        <include
            android:id="@+id/header_layout"
            layout="@layout/header_jurusan_bisnis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- White card background for titles -->
        <androidx.cardview.widget.CardView
            android:id="@+id/title_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="24dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="190dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingHorizontal="36dp"
                android:paddingBottom="24dp">


                <TextView
                    android:id="@+id/iv_berita_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:text="@string/berita_title"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_berita_subtitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:gravity="center"
                    android:text="@string/berita_subtitle"
                    android:textColor="@color/blue"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/berita_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:orientation="vertical"
            android:paddingHorizontal="24dp"
            app:layout_constraintTop_toBottomOf="@+id/title_card"
            tools:layout_editor_absoluteX="0dp">

            <!-- First News Item -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_berita_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="@string/berita_1_title"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_berita_1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/berita_1_title"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/berita_1_date"
                        android:textSize="14sp" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <!-- Second News Item -->
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_berita_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp"
                app:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:contentDescription="@string/berita_2_title"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img_berita_2" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:layout_marginTop="12dp"
                        android:text="@string/berita_2_title"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="12dp"
                        android:text="@string/berita_2_date"
                        android:textSize="12sp" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>